# webguard

./: CHANGELOG.md  Cargo.toml  PATTERNS.md  README.md
.github/workflows/: ci.yml  release.yml
docs/test/: authority.html  clean.html  encoded.html  exfil.html  index.html  inject.html
src/: audit.rs  config.rs  main.rs  server.rs
src/classify/: encoding.rs  engine.rs  external.rs  mod.rs  patterns.rs  preprocess.rs  result.rs  stage1.rs  stage2.rs
src/fetch/: client.rs  extract.rs  mod.rs  ssrf.rs
testdata/benign/: documentation.json
