[package]
name = "webguard"
version = "0.3.3"
edition = "2024"
description = "Secure MCP server — scans web content for prompt injection before it enters LLM context"
license = "MIT OR GPL-3.0"
repository = "https://github.com/mark-liu/webguard"
keywords = ["mcp", "security", "prompt-injection", "llm"]
categories = ["command-line-utilities", "web-programming"]
homepage = "https://github.com/mark-liu/webguard"

[[bin]]
name = "webguard"
path = "src/main.rs"

[dependencies]
# MCP protocol
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# HTTP client — rquest for Chrome TLS/HTTP2 fingerprint emulation (defeats CF/Akamai).
# rquest-util is GPL-3.0; webguard is dual-licensed MIT-OR-GPL-3.0 to accommodate.
rquest = { version = "5", default-features = false, features = ["webpki-roots", "gzip", "brotli", "deflate", "cookies"] }
rquest-util = { version = "2", default-features = false, features = ["emulation"] }

# Pattern matching
aho-corasick = "1"
regex = "1"

# HTML processing
scraper = "0.23"
htmd = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# URL / networking
url = "2"
ipnetwork = "0.21"

# Unicode
unicode-normalization = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Signals
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.22"

# HTML entity decoding
htmlescape = "0.3"

# Percent decoding
percent-encoding = "2"

# Streaming
futures-util = "0.3"

# Error handling
anyhow = "1"

# JSON Schema (must match rmcp's re-exported version)
schemars = "1"


[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

# cargo-dist config
[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["homebrew"]
tap = "mark-liu/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
]

# Pin macOS runners to Sequoia (SDK 15.x). The default macos-14 (Sonoma SDK
# 14.5) produces aarch64 binaries whose rquest 5.1 TLS/HTTP2 stack hangs on
# outbound HTTPS when run on macOS 26 hosts. macos-15 binaries link against
# SDK 15.x which behaves correctly on newer macOS.
[workspace.metadata.dist.github-custom-runners.aarch64-apple-darwin]
runner = "macos-15"
[workspace.metadata.dist.github-custom-runners.x86_64-apple-darwin]
runner = "macos-15-intel"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
